fix detail page title on mobile devices

--- a/src/assets/css/librarybrowser.css
+++ b/src/assets/css/librarybrowser.css
@@ -509,13 +509,14 @@
     align-items: center;
     align-content: center;
     position: sticky;
-    top: 6.6%;
+    top: 3.85em;
     z-index: 2;
 }
 
 .layout-mobile .detailPagePrimaryContainer {
     display: block;
     position: relative;
+    top: 0;
 }
 
 .layout-tv .detailPagePrimaryContainer {
